--- a/package.json
+++ b/package.json
@@ -1,87 +1,78 @@
 {
   "name": "jupiter-and-the-giraffe",
   "version": "0.0.0",
-  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "server": "PORT=8081 node local.js",
-    "build:browser:serverless": "ng build --prod",
+    "build:browser:prod": "ng build --prod",
+    "build:browser:serverless": "ng build --prod --base-href /production/",
     "build:serverless": "npm run build:browser:serverless && npm run build:server:serverless",
+    "build:prod": "npm run build:browser:prod && npm run build:server:prod",
+    "server": "node local.js",
+    "build:prod:deploy": "npm run build:prod && npm run deploy",
     "build:serverless:deploy": "npm run build:serverless && npm run deploy",
     "deploy": "serverless deploy",
-    "build:server:serverless": "ng run jupiter-and-the-giraffe:server:serverless && webpack --config webpack.server.config.js --progress --colors"
+    "build:server:prod": "webpack --config webpack.server.config.js --progress --colors",
+    "build:server:serverless": "webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "^6.1.10",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/platform-server": "^6.0.0",
-    "@angular/router": "^6.1.10",
-    "@ng-toolkit/serverless": "^1.1.41",
-    "@ng-toolkit/universal": "^1.1.41-beta.110",
-    "@nguniversal/express-engine": "^6.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "@agm/core": "^1.0.0-beta.7",
+    "@angular/animations": "~8.2.5",
+    "@angular/common": "~8.2.5",
+    "@angular/compiler": "~8.2.5",
+    "@angular/core": "~8.2.5",
+    "@angular/forms": "~8.2.5",
+    "@angular/platform-browser": "~8.2.5",
+    "@angular/platform-browser-dynamic": "~8.2.5",
+    "@angular/platform-server": "^8.2.6",
+    "@angular/router": "~8.2.5",
+    "@ng-toolkit/serverless": "^7.1.2",
+    "@ng-toolkit/universal": "^1.1.21",
+    "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
     "angularfire2": "^5.0.2",
     "angulartics2": "^7.0.0",
     "aos": "^2.3.3",
     "aws-serverless-express": "^3.2.0",
     "bootstrap": "^4.3.1",
-    "codelyzer": "^4.5.0",
-    "core-js": "^2.4.1",
+    "bootstrap-scss": "^4.3.1",
     "cors": "~2.8.4",
     "cp-cli": "^1.1.0",
     "firebase": "^5.9.0",
-    "grpc": "^1.15.1",
-    "jasmine": "^3.2.0",
-    "ng-recaptcha": "^4.0.0",
+    "ng-recaptcha": "^5.0.0",
     "path": "^0.12.7",
-    "rxjs": "^6.3.3",
-    "ts-loader": "4.2.0",
-    "zone.js": "^0.8.14"
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.5",
-    "@angular/cli": "^6.1.10",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/language-service": "^6.1.10",
-    "@types/jasmine": "^2.8.9",
-    "@types/jasminewd2": "^2.0.5",
-    "@types/node": "^6.14.0",
-    "jasmine-core": "^3.2.1",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^3.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.3.1",
-    "node-sass": "^4.5.3",
+    "@angular-devkit/build-angular": "~0.803.4",
+    "@angular/cli": "~8.3.4",
+    "@angular/compiler-cli": "~8.2.5",
+    "@angular/language-service": "~8.2.5",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "opencollective": "^1.0.3",
-    "protractor": "^5.4.1",
-    "puppeteer": "^1.19.0",
-    "serverless": "^1.51.0",
+    "protractor": "~5.4.0",
+    "serverless": "1.40.0",
     "serverless-apigw-binary": "^0.4.4",
     "ts-loader": "4.2.0",
-    "ts-node": "^3.0.6",
-    "tslint": "^5.11.0",
-    "typescript": "^2.9.2",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.14"
-  },
-  "resolutions": {
-    "grpc": "^1.11.0"
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3",
+    "webpack-cli": "^3.3.8"
   }
 }
