--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,10 +142,10 @@ jobs:
       - checkout
 
       - restore_cache:
-        keys:
-          - v2-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v2-dependencies-
+          keys:
+            - v2-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v2-dependencies-
 
       - run:
           name: Install dependencies
@@ -158,8 +158,7 @@ jobs:
 
       - run:
           name: 'Deploy Firebase'
-          command: |
-            ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
+          command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
 
 workflows:
   version: 2
@@ -228,7 +227,7 @@ workflows:
 
       - build_deploy_prod:
           requires:
-            - deploy_firebase
+            - hold
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*/
@@ -238,6 +237,7 @@ workflows:
       - invalidate_code:
           requires:
             - build_deploy_prod
+            - deploy_firebase
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*/
