--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,7 +149,7 @@ jobs:
 
       - run:
           name: Install dependencies
-          command: npm install
+          command: npm ci
 
       - save_cache:
           paths:
@@ -157,8 +157,8 @@ jobs:
           key: v2-dependencies-{{ checksum "package.json" }}
 
       - run:
-          name: 'Deploy Firebase'
-          command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
+          name: Deploy Firebase
+          command: ~/app/node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN"
 
 workflows:
   version: 2
