--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "firebase-functions": "^3.6.0",
     "firebase-tools": "^8.0.1",
     "ng-recaptcha": "^5.0.0",
+    "nodemailer": "^6.4.6",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.11.1",
