--- a/package.json
+++ b/package.json
@@ -21,49 +21,48 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.1.0",
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@grpc/grpc-js": "^0.6.18",
+    "@agm/core": "^1.0.0-beta.7",
+    "@angular/animations": "~8.2.5",
+    "@angular/common": "~8.2.5",
+    "@angular/compiler": "~8.2.5",
+    "@angular/core": "~8.2.5",
+    "@angular/forms": "~8.2.5",
+    "@angular/platform-browser": "~8.2.5",
+    "@angular/platform-browser-dynamic": "~8.2.5",
+    "@angular/platform-server": "^8.2.6",
+    "@angular/router": "~8.2.5",
+    "@grpc/grpc-js": "^0.6.10",
     "@ng-toolkit/serverless": "^7.1.2",
     "@ng-toolkit/universal": "^1.1.21",
-    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
-    "angularfire2": "^5.4.2",
+    "@nguniversal/module-map-ngfactory-loader": "^8.1.1",
+    "angularfire2": "^5.0.2",
     "angulartics2": "^7.0.0",
     "aos": "^2.3.3",
-    "aws-serverless-express": "^3.3.8",
-    "bootstrap": "^4.4.1",
-    "bootstrap-scss": "^4.4.1",
+    "aws-serverless-express": "^3.2.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-scss": "^4.3.1",
     "cors": "~2.8.4",
     "cp-cli": "^1.1.0",
     "firebase": "^5.11.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.0",
-    "firebase-tools": "^8.0.1",
     "ng-recaptcha": "^5.0.0",
     "nodemailer": "^6.4.6",
     "nodemailer-mailgun-transport": "^2.0.0",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
-    "tslib": "^1.11.1",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular/cli": "~8.3.4",
+    "@angular/compiler-cli": "~8.2.5",
+    "@angular/language-service": "~8.2.5",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "^2.0.8",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^5.0.0",
     "husky": "^3.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -71,16 +70,16 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "opencollective": "^1.0.3",
-    "protractor": "^5.4.3",
+    "protractor": "~5.4.0",
     "serverless": "1.40.0",
     "serverless-apigw-binary": "^0.4.4",
     "ts-loader": "4.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.8"
   },
   "husky": {
     "hooks": {
