--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "firebase": "^5.11.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.0",
+    "firebase-tools": "^8.0.2",
     "ng-recaptcha": "^5.0.0",
     "nodemailer": "^6.4.6",
     "nodemailer-mailgun-transport": "^2.0.0",
